--- a/style.css
+++ b/style.css
@@ -497,7 +497,7 @@ section {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 2rem;
+  padding: 1rem rem;
   background-color: #1e1e2f;
   color: #fff;
 }
